# boolean_circuit_model

./: CMakeLists.txt  README.md
src/: booleancircuitgenome.cpp  booleancircuitgenome.h  booleanfunction.cpp  booleanfunction.h  cheater_recognition.cpp  circuitmodel.cpp  circuitmodel.h  randman.cpp  randman.h  twoinputlogicgate.cpp  twoinputlogicgate.h
